# meetsum

./: .gitignore
backend/: pyproject.toml  test.py
backend/audio_tools/: audiotools.py
backend/db/: users.py
backend/pretrained_models/sepformer-wsj02mix/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
backend/pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
backend/utils/: hashing.py  randomwords.py
backend/vbabackend/: __init__.py
frontend/: package-lock.json  package.json
frontend/components/Recorder/: index.js
frontend/pages/: index.js
frontend/pages/login/: index.js
frontend/pages/register/: index.js
frontend/styles/: Home.module.css
