[tool.poetry]
name = "vbabackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
dev = "vbabackend:main"

[tool.poetry.dependencies]
python = "^3.10"
speechbrain = "^0.5.13"
speechrecognition = "^3.10.0"
soundfile = "^0.12.1"
pydub = "^0.25.1"
pymongo = "^4.3.3"
flask = "^2.2.3"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
